# BlogAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt
learn/: Complete_Agent.ipynb  Starting Your Journey from Basic Coder to AI Engineer with Generative AI.md  basic_blog_chatbot.ipynb  demystifying_self-attention_from_fundamentals_to_practical_implementation.md  from_basic_coder_to_ai_engineer_a_practical_roadmap_to_mastering_genai.md  realtime_blog_chatbot.ipynb
src/: backend_updated.py  blog_checkpoints.db  blog_checkpoints.db-shm  blog_checkpoints.db-wal  check.ipynb  cloud_vs_local_sandboxing_in_ai_coding_agents_architecture_and_trade-offs.md  demystifying_coding_agents_how_claude_code_and_openai_codex_work_and_building_your_own.md  frontend.py  how_to_build_production-ready_ai_systems_not_just_demos.md  inside_ai_coding_agents_how_claude_code_and_openai_codex_work_and_how_to_build_your_own.md  inside_ai_coding_agents_how_claude_code_and_openai_codex_work_under_the_hood_and_building_your_own.md  mastering_retrieval-augmented_generation_rag_an_end-to-end_guide_for_2026.md  sessions.json
